# RAG_Helpdesk

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  instrucciones.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  middleware.py
backend/app/api/v1/: admin.py  consultas.py  sistema.py
backend/app/core/: config.py  logging.py  prompts.py
backend/app/domain/: consulta.py  fragmento.py
backend/app/infrastructure/: embeddings_client.py  llm_client.py
backend/app/repositories/: chroma_repository.py  interfaces.py
backend/app/schemas/: admin.py  consulta.py  enums.py  sistema.py
backend/app/services/: generation_service.py  ingestion_service.py  intent_classifier_service.py  interfaces.py  rag_service.py  retrieval_service.py  routing_service.py  scoring_service.py
backend/docs/: PRD.md  guia_vpn.md  politicas_soporte.md  preguntas_frecuentes.txt
backend/docs/reviews/: 18-04.md
backend/scripts/: diagnostico.py  ingest.py
backend/tests/: conftest.py
backend/tests/unit/services/: test_intent_classifier_service.py  test_routing_service.py
frontend/: Dockerfile  app.py  pyproject.toml
